<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CountingActivity">

    <EditText
        android:id="@+id/iheight"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/electrolize"
        android:hint="@string/m1hformat"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/iweight"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/electrolize"
        android:hint="@string/m1wformat"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/yheight"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/yweight"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iheight" />

    <Button
        android:id="@+id/btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:fontFamily="@font/electrolize"
        android:onClick="countClicked"
        android:text="@string/tcount"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iweight"
        app:layout_constraintVertical_bias="0.658" />

    <TextView
        android:id="@+id/iresultdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/electrolize"
        android:gravity="center"
        android:onClick="resultClicked"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iweight"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/electrolize"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iresultdetail"
        app:layout_constraintVertical_bias="0.151" />

</androidx.constraintlayout.widget.ConstraintLayout>